--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           path: C:\Users\circleci\project
       - restore_cache:
           keys:
-            - dotnet-packages-v1-{{ checksum "circleci-demo-windows.csproj" }}
+            - dotnet-packages-v1-{{ checksum "MiniBackend.csproj" }}
       - run:
           name: "Install project dependencies"
           command: dotnet.exe restore
