--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,35 +3,32 @@
 version: 2.1
 
 orbs:
-  win: circleci/windows@2.2.0
+  heroku: circleci/heroku@1.2.6
+  windows: circleci/windows@2.4.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build:
     executor:
-      name: win/default
-    working_directory: C:\Users\circleci\project\MiniBackend
+      name: windows/default
     steps:
       - checkout:
-          path: C:\Users\circleci\project
       - restore_cache:
           keys:
             - dotnet-packages-v1-{{ checksum "MiniBackend.csproj" }}
       - run:
           name: "Install project dependencies"
           command: dotnet.exe restore
-      - save_cache:
-          paths:
-            - C:\Users\circleci\project\MiniBackend\.nuget\packages
-          key: dotnet-packages-v1-{{ checksum "MiniBackend.csproj" }}
       - run:
-          name: "Run Build step"
-          command: dotnet.exe publish -c Release
+          name: "Build Application according to some given configuration"
+          command: dotnet.exe build --configuration Release
+          
+  #32dc4438-3e25-4c2d-af91-fa06c8751f3a
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  build:
+  heroku_deploy:
     jobs:
-      - build
+      - heroku/deploy-via-git
