--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     executor:
       name: windows/default
     steps:
-      - checkout:
+      - checkout
       - restore_cache:
           keys:
             - dotnet-packages-v1-{{ checksum "MiniBackend.csproj" }}
