removed front end from the backend

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BackendMinisContext": "Server=MSI\\SQLEXPRESS;Database=mini-paint-games;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BackendMinisContext": "Server=tcp:miniphotoappdb566.database.windows.net,1433;Initial Catalog=mini-paint;Persist Security Info=False;User ID=sybrid;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
